--- a/css/mapstyle.css
+++ b/css/mapstyle.css
@@ -65,6 +65,17 @@ li {
 	width: 100%;
 	height: 100%;
 }
+#legend {
+	background-color: #fff;
+	border: 3px solid #000;
+	padding: 5px;
+	width: 200px;
+	position: fixed;
+	left: 5px;
+	bottom: 5px;
+	z-index: 1001;
+	display: none;
+}
 #location-search {
 	background-color: #fff;
 	box-shadow: 5px 5px 2px #444444;
@@ -129,4 +140,7 @@ li {
 		float: right;
 		width: 100px;
 	}
+	#legend {
+	display: block;
+}
 }
