--- a/css/mapstyle.css
+++ b/css/mapstyle.css
@@ -29,6 +29,9 @@ li {
 	border-bottom: 1px solid #DDDDDD;
 	height: auto;
 }
+.venue:hover {
+	background-color: #00cc00;
+}
 .venueLeft {
 	display: inline-block;
 	width: 210px;
@@ -60,6 +63,13 @@ li {
 	border-top: 3px solid #ff2222;
 	color: #ff2222;
 	text-align: center;
+}
+.infowindow {
+	height: 100px;
+	width: 200px;
+}
+.info-title {
+	font-weight: bold;
 }
 #map-canvas {
 	width: 100%;
